deploy/kubernetes/overlays/local/backend-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: asic-api
spec:
  replicas: 1
  minReadySeconds: 0
  template:
    spec:
      containers:
        - name: api
