deploy/kubernetes/overlays/local/frontend-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: asic-frontend
spec:
  replicas: 1
  minReadySeconds: 0
