deploy/kubernetes/overlays/local/remove-production-edge.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: asic
$patch: delete
